code: major changes

--- a/src/components/Footer/footer.scss
+++ b/src/components/Footer/footer.scss
@@ -10,11 +10,11 @@ footer{
 }
 .imgfooter{
   width: 60px;
-  height: 50px;
-}
-.imgfooterdsc{
-  width: auto;
   height: 60px;
+}
+.imgfooterieeeNsakcet{
+  width: auto;
+  height: 80px;
 }
 footer .content{
   max-width: 1250px;
