--- a/src/components/Footer/footer.scss
+++ b/src/components/Footer/footer.scss
@@ -125,7 +125,7 @@ footer .content .link-boxes .box1{
 } */
 footer .bottom-details{
   width: 100%;
-  background: #0F0844;
+  background: #FF5E8F;
 }
 footer .bottom-details .bottom_text{
   max-width: 1250px;
