--- a/src/components/Top-division-components/top-division-c.css
+++ b/src/components/Top-division-components/top-division-c.css
@@ -64,7 +64,7 @@ button {
   border-radius: 19px;
   font-size: 2rem;
   color: rgb(255, 255, 255);
-  background-color: #6a63b7;
+  background-color: #8C52FF;
   font-weight: 300;
   position: relative;
 }
